--- a/html/schedule.html
+++ b/html/schedule.html
@@ -980,11 +980,51 @@
                                     <tbody>
                                         <tr>
                                             <td class="fc-event-container"></td>
-                                            <td class="fc-event-container" align="center"></td>
-                                            <td class="fc-event-container" align="center"></td>
-                                            <td class="fc-event-container" align="center"></td>
-                                            <td class="fc-event-container" align="center">OHSAA<br />Regionals</td>
-                                            <td class="fc-event-container" align="center">OHSAA<br />Regionals</td>
+                                            <td class="fc-event-container" align="center">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/Y43JLyHSG4G2" target="_blank" data-original-title="" title="">
+                                                    <div class="fc-time mbl">6:00 PM</div>
+                                                    <span class="fc-title">Full Team Workout</span>
+                                                    <p>
+                                                        <span class="fc-location mts">Hoffman Field</span>
+                                                    </p>
+                                                </a>
+                                            </td>
+                                            <td class="fc-event-container" align="center">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/Y43JLyHSG4G2" target="_blank" data-original-title="" title="">
+                                                    <div class="fc-time mbl">6:00 PM</div>
+                                                    <span class="fc-title">Full Team Workout</span>
+                                                    <p>
+                                                        <span class="fc-location mts">Hoffman Field</span>
+                                                    </p>
+                                                </a>
+                                            </td>
+                                            <td class="fc-event-container" align="center">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/Y43JLyHSG4G2" target="_blank" data-original-title="" title="">
+                                                    <div class="fc-time mbl">6:00 PM</div>
+                                                    <span class="fc-title">Full Team Workout</span>
+                                                    <p>
+                                                        <span class="fc-location mts">Hoffman Field</span>
+                                                    </p>
+                                                </a>
+                                            </td>
+                                            <td class="fc-event-container" align="center">OHSAA<br />Regionals
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/Y43JLyHSG4G2" target="_blank" data-original-title="" title="">
+                                                    <div class="fc-time mbl">6:00 PM</div>
+                                                    <span class="fc-title">Full Team Workout</span>
+                                                    <p>
+                                                        <span class="fc-location mts">Hoffman Field</span>
+                                                    </p>
+                                                </a>
+                                            </td>
+                                            <td class="fc-event-container" align="center">OHSAA<br />Regionals
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/Y43JLyHSG4G2" target="_blank" data-original-title="" title="">
+                                                    <div class="fc-time mbl">6:00 PM</div>
+                                                    <span class="fc-title">Full Team Workout</span>
+                                                    <p>
+                                                        <span class="fc-location mts">Hoffman Field</span>
+                                                    </p>
+                                                </a>
+                                            </td>
                                             <td class="fc-event-container"></td>
                                         </tr>
                                     </tbody>
