--- a/html/schedule.html
+++ b/html/schedule.html
@@ -1007,7 +1007,7 @@
                                                     </p>
                                                 </a>
                                             </td>
-                                            <td class="fc-event-container" align="center">OHSAA<br />Regionals
+                                            <td class="fc-event-container" align="center">
                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/Y43JLyHSG4G2" target="_blank" data-original-title="" title="">
                                                     <div class="fc-time mbl">6:00 PM</div>
                                                     <span class="fc-title">Full Team Workout</span>
@@ -1015,8 +1015,9 @@
                                                         <span class="fc-location mts">Hoffman Field</span>
                                                     </p>
                                                 </a>
+                                                OHSAA<br />Regionals
                                             </td>
-                                            <td class="fc-event-container" align="center">OHSAA<br />Regionals
+                                            <td class="fc-event-container" align="center">
                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/Y43JLyHSG4G2" target="_blank" data-original-title="" title="">
                                                     <div class="fc-time mbl">6:00 PM</div>
                                                     <span class="fc-title">Full Team Workout</span>
@@ -1024,6 +1025,7 @@
                                                         <span class="fc-location mts">Hoffman Field</span>
                                                     </p>
                                                 </a>
+                                                OHSAA<br />Regionals
                                             </td>
                                             <td class="fc-event-container"></td>
                                         </tr>
