--- a/html/schedule.html
+++ b/html/schedule.html
@@ -1027,7 +1027,7 @@
                                                 </a>
                                                 OHSAA<br />Regionals
                                             </td>
-                                            <td class="fc-event-container"></td>
+                                            <td class="fc-event-container">Stewart/ Woods Golf Outing</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -1038,74 +1038,89 @@
                                 <table>
                                     <tbody>
                                         <tr>
-                                            <td class="fc-day fc-widget-content fc-sun fc-future" data-date="2017-06-18"></td>
-                                            <td class="fc-day fc-widget-content fc-mon fc-future" data-date="2017-06-19"></td>
-                                            <td class="fc-day fc-widget-content fc-tue fc-future" data-date="2017-06-20"></td>
-                                            <td class="fc-day fc-widget-content fc-wed fc-future" data-date="2017-06-21"></td>
-                                            <td class="fc-day fc-widget-content fc-thu fc-future" data-date="2017-06-22"></td>
-                                            <td class="fc-day fc-widget-content fc-fri fc-future" data-date="2017-06-23"></td>
-                                            <td class="fc-day fc-widget-content fc-sat fc-future" data-date="2017-06-24"></td>
-
+                                            <td class="fc-day fc-widget-content fc-sun" data-date="2018-05-27"></td>
+                                            <td class="fc-day fc-widget-content fc-mon" data-date="2018-05-28"></td>
+                                            <td class="fc-day fc-widget-content fc-tue" data-date="2018-05-29"></td>
+                                            <td class="fc-day fc-widget-content fc-wed" data-date="2018-05-30"></td>
+                                            <td class="fc-day fc-widget-content fc-thu" data-date="2018-05-31"></td>
+                                            <td class="fc-day fc-widget-content fc-fri" data-date="2018-06-01"></td>
+                                            <td class="fc-day fc-widget-content fc-sat" data-date="2018-06-02"></td>
                                         </tr>
-
                                     </tbody>
-
                                 </table>
-
                             </div>
                             <div class="fc-content-skeleton">
                                 <table>
                                     <thead>
                                         <tr>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-sun fc-future" data-date="2017-06-18">18</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-mon fc-future" data-date="2017-06-19">19</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-tue fc-future" data-date="2017-06-20">20</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-wed fc-future" data-date="2017-06-21">21</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-thu fc-future" data-date="2017-06-22">22</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-fri fc-future" data-date="2017-06-23">23</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-sat fc-future" data-date="2017-06-24">24</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sun" data-date="2018-05-27">27</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-mon" data-date="2018-05-28">28</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-tue" data-date="2018-05-29">29</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-wed" data-date="2018-05-30">30</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-thu" data-date="2018-05-31">31</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-fri" data-date="2018-06-01">June 1</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sat" data-date="2018-06-02">2</td>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td></td>
                                             <td class="fc-event-container">
-                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/2CMjTvxmt3A2" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">6:00 pm</div>
-                                                    <span class="fc-title">Chillicothe Post 757 <br />at Waverly Post 142</span><p>
-                                                        <span class="fc-location mts">Waverly HS</span>
-                                                    </p>
-                                                </a>
-                                            </td>
-                                            <td></td>
-                                            <td class="fc-event-container">
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" data-original-title="" title="">
-                                                    <div class="fc-time mbl">5:30 pm</div>
-                                                    <span class="fc-title">Lancaster Post 11 <br />at Chillicothe Post 757</span>
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/Y43JLyHSG4G2" target="_blank" data-original-title="" title="">
+                                                    <div class="fc-time mbl"></div>
+                                                    <span class="fc-title">50th Season Celebration<br />Family Fun Day<br />Alumni Game</span>
                                                     <p>
                                                         <span class="fc-location mts">Hoffman Field</span>
                                                     </p>
                                                 </a>
                                             </td>
-                                            <td></td>
-                                            <td class="fc-event-container">
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/jadwin-memorial" target="_blank" data-original-title="" title="">
+                                            <td class="fc-event-container" align="center">  
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/oF3WzAVePtm" target="_blank" data-original-title="" title="">
                                                     <div class="fc-time mbl"></div>
-                                                    <span class="fc-title">Chillicothe Post 757 <br />Jadwin Tourney</span>
+                                                    <span class="fc-title">Full Team Workout</span>
                                                     <p>
-                                                        <span class="fc-location mts">Chillicothe, OH</span>
+                                                        <span class="fc-location mts">Chillicothe High School?</span>
+                                                    </p>
+                                                </a>                                              
+                                            </td>
+                                            <td class="fc-event-container" align="center">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/Y43JLyHSG4G2" target="_blank" data-original-title="" title="">
+                                                    <div class="fc-time mbl">6:00 PM</div>
+                                                    <span class="fc-title">Full Team Workout</span>
+                                                    <p>
+                                                        <span class="fc-location mts">Hoffman Field</span>
                                                     </p>
                                                 </a>
                                             </td>
-                                            <td class="fc-event-container">
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/jadwin-memorial" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl"></div>
-                                                    <span class="fc-title">Chillicothe Post 757 <br />Jadwin Tourney</span>
+                                            <td class="fc-event-container" align="center">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/Y43JLyHSG4G2" target="_blank" data-original-title="" title="">
+                                                    <div class="fc-time mbl">6:00 PM</div>
+                                                    <span class="fc-title">Full Team Workout</span>
                                                     <p>
-                                                        <span class="fc-location mts">Chillicothe, OH</span>
+                                                        <span class="fc-location mts">Hoffman Field</span>
                                                     </p>
                                                 </a>
                                             </td>
+                                            <td class="fc-event-container" align="center">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/Y43JLyHSG4G2" target="_blank" data-original-title="" title="">
+                                                    <div class="fc-time mbl">6:00 PM</div>
+                                                    <span class="fc-title">Full Team Workout</span>
+                                                    <p>
+                                                        <span class="fc-location mts">Hoffman Field</span>
+                                                    </p>
+                                                </a>
+                                                OHSAA<br />Regionals
+                                            </td>
+                                            <td class="fc-event-container" align="center">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/Y43JLyHSG4G2" target="_blank" data-original-title="" title="">
+                                                    <div class="fc-time mbl">6:00 PM</div>
+                                                    <span class="fc-title">Full Team Workout</span>
+                                                    <p>
+                                                        <span class="fc-location mts">Hoffman Field</span>
+                                                    </p>
+                                                </a>
+                                                OHSAA<br />Regionals
+                                            </td>
+                                            <td class="fc-event-container">Stewart/ Woods Golf Outing</td>
                                         </tr>
                                     </tbody>
                                 </table>
