--- a/html/seniorSchedule.html
+++ b/html/seniorSchedule.html
@@ -2476,7 +2476,7 @@
                                                 </a>
                                                 OHSAA<br />State
                                             </td>
-                                            <td>OHSAA<br />State</td>
+                                            <td class="fc-event-container" align="center">OHSAA<br />State</td>
                                             <td class="fc-event-container" align="center">
                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="" target="_blank" data-original-title="" title="">
                                                     <div class="fc-time mbl">All Day</div>
