--- a/html/seniorSchedule.html
+++ b/html/seniorSchedule.html
@@ -2555,7 +2555,16 @@
                                             <td class="fc-event-container" align="center">
                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/round-robin" target="_blank" data-original-title="" title="">
                                                     <div class="fc-time mbl">All Day</div>
-                                                    <span class="fc-title">Chillicothe Baseball Round Robin</span>
+                                                    <span class="fc-title">Chillicothe Baseball<br/>Round Robin<br/>Wood Bat</span>
+                                                    <p>
+                                                        <span class="fc-location mts">Chillicothe, OH</span>
+                                                    </p>
+                                                </a>
+                                            </td>
+                                            <td class="fc-event-container" align="center">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/round-robin" target="_blank" data-original-title="" title="">
+                                                    <div class="fc-time mbl">All Day</div>
+                                                    <span class="fc-title">Chillicothe Baseball<br />Round Robin<br />Wood Bat</span>
                                                     <p>
                                                         <span class="fc-location mts">Chillicothe, OH</span>
                                                     </p>
