--- a/html/seniorSchedule.html
+++ b/html/seniorSchedule.html
@@ -2610,53 +2610,36 @@
                                     <tbody>
                                         <tr>
                                             <td class="fc-event-container">
-                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="" target="_blank" data-original-title="" title="">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/round-robin" target="_blank" data-original-title="" title="">
                                                     <div class="fc-time mbl">All Day</div>
-                                                    <span class="fc-title">Toledo Round Robin</span>
+                                                    <span class="fc-title">Chillicothe Baseball<br />Round Robin<br />Wood Bat</span>
                                                     <p>
-                                                        <span class="fc-location mts">Toledo, OH</span>
+                                                        <span class="fc-location mts">Chillicothe, OH</span>
                                                     </p>
                                                 </a>
                                             </td>
+                                            <td class="fc-event-container" align="center">
+                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/AV91aw4g9pv" target="_blank" data-original-title="" title="">
+                                                    <div class="fc-time mbl">6:00 PM</div>
+                                                    <span class="fc-title">Chillicothe Post 757<br />at Portsmouth Post 23</span>
+                                                    <p>
+                                                        <span class="fc-location mts">Branch Rickey Stadium</span>
+                                                    </p>
+                                                </a>
+                                            </td>                                            
                                             <td></td>
                                             <td class="fc-event-container" align="center">
                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/mu4CUzCiEAP2" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">6:00 PM</div>
-                                                    <span class="fc-title">Circleville Post 134<br />at Chillicothe Post 757</span>
+                                                    <div class="fc-time mbl">5:30 PM</div>
+                                                    <span class="fc-title">Chillicothe Post 62<br />at Chillicothe Post 757</span>
                                                     <p>
                                                         <span class="fc-location mts">VA Memorial Stadium</span>
                                                     </p>
                                                 </a>
                                             </td>
-                                            <td class="fc-event-container" align="center">
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/Y43JLyHSG4G2" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">5:30 PM</div>
-                                                    <span class="fc-title">Waverly Post 142<br />at Chillicothe Post 757</span>
-                                                    <p>
-                                                        <span class="fc-location mts">Hoffman Field</span>
-                                                    </p>
-                                                </a>
-                                            </td>
                                             <td></td>
-                                            <td class="fc-event-container" align="center">
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/round-robin" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">All Day</div>
-                                                    <span class="fc-title">Chillicothe Baseball<br />Round Robin<br />Wood Bat</span>
-                                                    <p>
-                                                        <span class="fc-location mts">Chillicothe, OH</span>
-                                                    </p>
-                                                </a>
-                                            </td>
-                                            <td class="fc-event-container" align="center">
-                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/round-robin" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">All Day</div>
-                                                    <span class="fc-title">Chillicothe Baseball<br />Round Robin<br />Wood Bat</span>
-                                                    <p>
-                                                        <span class="fc-location mts">Chillicothe, OH</span>
-                                                    </p>
-                                                </a>
-                                            </td>
-                                            </td>
+                                            <td></td>
+                                            <td></td>
                                         </tr>
                                     </tbody>
                                 </table>
