--- a/html/seniorSchedule.html
+++ b/html/seniorSchedule.html
@@ -1185,7 +1185,7 @@
                                                 </a>
                                             </td>
                                             <td class="fc-event-container" align="center">
-                                                <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/round-robin" target="_blank" data-original-title="" title="">
+                                                <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/round-robin" target="_blank" data-original-title="" title="">
                                                     <div class="fc-time mbl">All Day</div>
                                                     <span class="fc-title">Chillicothe Baseball<br />Round Robin<br />Wood Bat</span>
                                                     <p>
