--- a/html/seniorSchedule.html
+++ b/html/seniorSchedule.html
@@ -1066,7 +1066,7 @@
                                             </td>
                                             <td class="fc-event-container" align="center">  
                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/oF3WzAVePtm" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl"></div>
+                                                    <div class="fc-time mbl">6:00 PM</div>
                                                     <span class="fc-title">Full Team Workout</span>
                                                     <p>
                                                         <span class="fc-location mts">Chillicothe High School?</span>
@@ -1148,7 +1148,7 @@
                                         <tr>
                                             <td class="fc-event-container">
                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">All Day</div>
+                                                    <div class="fc-time mbl"></div>
                                                     <span class="fc-title">Toledo Round Robin</span>
                                                     <p>
                                                         <span class="fc-location mts">Toledo, OH</span>
@@ -1177,7 +1177,7 @@
                                             <td></td>
                                             <td class="fc-event-container" align="center">
                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/round-robin" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">All Day</div>
+                                                    <div class="fc-time mbl"></div>
                                                     <span class="fc-title">Chillicothe Baseball<br/>Round Robin<br/>Wood Bat</span>
                                                     <p>
                                                         <span class="fc-location mts">Chillicothe, OH</span>
@@ -1186,7 +1186,7 @@
                                             </td>
                                             <td class="fc-event-container" align="center">
                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/round-robin" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">All Day</div>
+                                                    <div class="fc-time mbl"></div>
                                                     <span class="fc-title">Chillicothe Baseball<br />Round Robin<br />Wood Bat</span>
                                                     <p>
                                                         <span class="fc-location mts">Chillicothe, OH</span>
@@ -1234,7 +1234,7 @@
                                         <tr>
                                             <td class="fc-event-container">
                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="http://chillicothebaseball.com/index.php/events/round-robin" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl">All Day</div>
+                                                    <div class="fc-time mbl"></div>
                                                     <span class="fc-title">Chillicothe Baseball<br />Round Robin<br />Wood Bat</span>
                                                     <p>
                                                         <span class="fc-location mts">Chillicothe, OH</span>
