--- a/html/seniorSchedule.html
+++ b/html/seniorSchedule.html
@@ -1097,8 +1097,8 @@
                                                         <span class="fc-location mts">Shaffer Park</span>
                                                     </p>
                                                 </a>
-                                                OHSAA<br />State
                                             </td>
+                                            <td class="fc-event-container" align="center">OHSAA<br />State</td>
                                             <td class="fc-event-container" align="center">OHSAA<br />State</td>
                                             <td class="fc-event-container" align="center">
                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="" target="_blank" data-original-title="" title="">
@@ -1148,7 +1148,7 @@
                                         <tr>
                                             <td class="fc-event-container">
                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="" target="_blank" data-original-title="" title="">
-                                                    <div class="fc-time mbl"></div>
+                                                    <div class="fc-time mbl">All Day</div>
                                                     <span class="fc-title">Toledo Round Robin</span>
                                                     <p>
                                                         <span class="fc-location mts">Toledo, OH</span>
