--- a/html/seniorSchedule.html
+++ b/html/seniorSchedule.html
@@ -1055,7 +1055,8 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td class="fc-event-container">
+                                            <td class="fc-event-container" align="center"></td>
+                                            <td class="fc-event-container" align="center">
                                                 <a class="home fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/Y43JLyHSG4G2" target="_blank" data-original-title="" title="">
                                                     <div class="fc-time mbl"></div>
                                                     <span class="fc-title">50th Season Celebration<br />Family Fun Day<br />Alumni Game</span>
@@ -1097,8 +1098,7 @@
                                                         <span class="fc-location mts">Shaffer Park</span>
                                                     </p>
                                                 </a>
-                                            </td>
-                                            <td class="fc-event-container" align="center">OHSAA<br />State</td>
+                                            OHSAA<br />State</td>
                                             <td class="fc-event-container" align="center">OHSAA<br />State</td>
                                             <td class="fc-event-container" align="center">
                                                 <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="" target="_blank" data-original-title="" title="">
